# space-sift

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONSTITUTION.md  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.agents/skills/prepare-release/: SKILL.md
.agents/skills/verify-change/: SKILL.md
.codex/: CONSTITUTION.md  PLANS.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/: duplicate-performance.md  plan.md  project-map.md  release.md  roadmap.md  safety.md  scan-performance.md  workflows.md
docs/adr/: 2026-04-18-scan-run-persistence-and-resume.md
docs/architecture/: 2026-04-18-scan-run-continuity.md  2026-04-22-workspace-navigation-ui.md
docs/changes/2026-04-22-workspace-navigation-ui-m1-restore-context/: change.yaml  explain-change.md
docs/changes/2026-04-22-workspace-navigation-ui-m2-shell-status/: change.yaml  explain-change.md
docs/changes/2026-04-23-ci-powershell-contract/: change.yaml  explain-change.md
docs/changes/2026-04-23-workspace-navigation-ui-m3-startup-switching/: change.yaml  explain-change.md
docs/changes/2026-04-23-workspace-navigation-ui-m4-status-hardening/: change.yaml  explain-change.md
docs/changes/2026-04-24-ui-design-fidelity-m1/: change.yaml  explain-change.md
docs/changes/2026-04-24-ui-design-fidelity-m2/: change.yaml  explain-change.md
docs/explain/: 2026-04-22-scan-run-continuity.md
docs/plans/: 0000-00-00-example-plan.md  2026-04-15-space-sift-win11-mvp.md  2026-04-16-fast-safe-duplicate-analysis.md  2026-04-16-fast-safe-scan-architecture.md  2026-04-16-history-and-duplicate-review-clarity.md  2026-04-16-results-explorer-inline-usage.md  2026-04-16-scan-progress-and-active-run-ux.md  2026-04-18-scan-run-continuity.md  2026-04-22-space-sift-workspace-navigation-ui.md  2026-04-24-space-sift-ui-design-fidelity.md
docs/proposals/: 2026-04-18-next-workstream-explore.md  2026-04-18-scan-resumption-and-run-clarity-proposal.md  2026-04-22-space-sift-advanced-ui-upgrade.md  2026-04-24-ui-design-fidelity-optimization.md
docs/ui/: space-sift-tabbed-ui-prototype.html  space-sift-ui-redesign-implementation.md
scripts/: ci.ps1  ci.sh  release-verify.sh  sign-windows.ps1  write-tauri-release-config.mjs
specs/: README.md  feature-template.md  feature-template.test.md  space-sift-cleanup.md  space-sift-cleanup.test.md  space-sift-duplicates.md  space-sift-duplicates.test.md  space-sift-mvp.md  space-sift-mvp.test.md  space-sift-release.md  space-sift-release.test.md  space-sift-results-explorer.md  space-sift-results-explorer.test.md  space-sift-scan-history.md  space-sift-scan-history.test.md  space-sift-scan-run-continuity.md  space-sift-scan-run-continuity.test.md  space-sift-ui-design-fidelity.md  space-sift-ui-design-fidelity.test.md  space-sift-workspace-navigation.md  space-sift-workspace-navigation.test.md
src/: App.css  App.test.tsx  App.tsx  cleanup.test.tsx  duplicates.test.tsx  main.tsx  release-config.test.ts  results-explorer.test.tsx  scan-history.test.tsx  workspace-navigation.test.tsx  workspaceNavigation.ts  workspaceShellLogger.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/crates/app-db/: Cargo.toml
src-tauri/crates/app-db/src/: lib.rs
src-tauri/crates/cleanup-core/: Cargo.toml
src-tauri/crates/cleanup-core/src/: lib.rs
src-tauri/crates/duplicates-core/: Cargo.toml
src-tauri/crates/duplicates-core/examples/: measure_duplicates.rs
src-tauri/crates/duplicates-core/src/: lib.rs
src-tauri/crates/elevation-helper/: Cargo.toml
src-tauri/crates/elevation-helper/src/: lib.rs
src-tauri/crates/scan-core/: Cargo.toml
src-tauri/crates/scan-core/examples/: measure_scan.rs
src-tauri/crates/scan-core/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: cleanup.rs  duplicates.rs  history.rs  mod.rs  privileged.rs  scan.rs  shell.rs
src-tauri/src/state/: mod.rs
src/lib/: runtimeSpaceSiftClient.test.ts  runtimeSpaceSiftClient.ts  spaceSiftClient.ts  spaceSiftTypes.ts  tauriSpaceSiftClient.ts
(+9 files in other folders)
