[workspace]
members = ["crates/app-db", "crates/scan-core"]
resolver = "2"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[package]
name = "space-sift"
version = "0.1.0"
description = "Space Sift Windows 11 storage analysis shell"
authors = ["xiongxianfei"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "space_sift_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
app-db = { path = "crates/app-db" }
scan-core = { path = "crates/scan-core" }
serde = { workspace = true }
tauri = { version = "2", features = [] }
