[package]
name = "app-db"
version = "0.1.0"
edition = "2021"

[dependencies]
cleanup-core = { path = "../cleanup-core" }
duplicates-core = { path = "../duplicates-core" }
rusqlite = { workspace = true }
scan-core = { path = "../scan-core" }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
